--- a/R-programming-an-introduction.Rmd
+++ b/R-programming-an-introduction.Rmd
@@ -2,10 +2,10 @@
 title: "R Programming: An Introduction"
 author: "Stacey Borrego (edited by Kristina Riemer)"
 output:
-  html_document: default
-  word_document: default
   pdf_document: 
       highlight: zenburn
+  word_document: default
+  html_document: default
 fontsize: 12pt
 urlcolor: blue
 linkcolor: red
@@ -35,6 +35,10 @@ knitr::opts_chunk$set(echo = TRUE)
     by Kyle W. Brown
 -   [Introduction to R](https://intro2r.com/) by Douglas, Roos, Mancini,
     Cuoto, & Lusseau
+
+## Notes
+
+- Sections marked with ^\$^ may have been skipped due to time limits
 
 ## Overview of RStudio
 
@@ -144,7 +148,7 @@ print(volume)
 -   Save the file
     -   File \> Save (`Ctrl` + `S`)
 
-\newpage
+
 
 ### Add comments in a script
 
@@ -191,9 +195,11 @@ round(3.14159, digits = 2)
 
 #### [Exercises]{.underline}
 
-1. Get the absolute value of -253 (hint: look at at the `Help` page for the `sqrt` function)
-2. Take the logarithm of 10 (hint: the function name is the first three letters of the word)
-3. Take the logarithm of 10, but change the base to `exp(3)`
+1.  Get the absolute value of -253 (hint: look at at the `Help` page for
+    the `sqrt` function)
+2.  Take the logarithm of 10 (hint: the function name is the first three
+    letters of the word)
+3.  Take the logarithm of 10, but change the base to `exp(3)`
 
 ```{r}
 abs(-253)
@@ -220,7 +226,7 @@ animals <- c("mouse", "rat", "dog")
 animals
 ```
 
-\newpage
+
 
 ### Explore the content of vector
 
@@ -245,16 +251,16 @@ str(animals)
 
 #### [Exercises]{.underline}
 
-1. Create a character vector of names of colors
-2. Put the vector elements into alphabetical order using the `sort` function
+1.  Create a character vector of names of colors
+2.  Put the vector elements into alphabetical order using the `sort`
+    function
 
 ```{r}
 colors <- c("red", "blue", "purple", "black")
 sort(colors)
 ```
 
-
-### Add elements to a vector
+### ^\$^Add elements to a vector
 
 ```{r eval=FALSE}
 # Add to the end of the vector
@@ -269,14 +275,13 @@ weight_g
 
 #### [Exercises]{.underline}
 
-1. Add another color to your colors vector
-2. Put the vector into reverse alphabetical order (hint: use `?`)
+1.  Add another color to your colors vector
+2.  Put the vector into reverse alphabetical order (hint: use `?`)
 
 ```{r}
 colors <- c(colors, "magenta")
 sort(colors, decreasing = TRUE)
 ```
-
 
 ### Data Types
 
@@ -328,9 +333,10 @@ str(tricky)
 
 #### [Exercises]{.underline}
 
-1. Create a logical vector with any number and order of `TRUE` and `FALSE`
-2. Add a numeric value to this vector
-3. What kind of vector will this be? 
+1.  Create a logical vector with any number and order of `TRUE` and
+    `FALSE`
+2.  Add a numeric value to this vector
+3.  What kind of vector will this be?
 
 ```{r}
 some_booleans <- c(TRUE, FALSE, FALSE, FALSE)
@@ -338,7 +344,7 @@ some_booleans <- c(3, some_booleans)
 typeof(some_booleans)
 ```
 
-## Conditional subsetting
+## ^\$^Conditional subsetting
 
 To extract one or several values from a vector, provide one or several
 indices in square brackets.
@@ -406,7 +412,7 @@ animals[animals %in% c("rat", "cat", "duck", "fish")]
 
 ```
 
-\newpage
+
 
 ## Missing data
 
@@ -429,6 +435,8 @@ max(heights)
 mean(heights, na.rm = TRUE)
 max(heights, na.rm = TRUE)
 ```
+
+### ^\$^Function examples
 
 ```{r eval=FALSE}
 # Returns vector of boolean values indicating if the value NA or not
@@ -455,9 +463,9 @@ complete.cases(heights)
 heights[complete.cases(heights)]
 ```
 
-\newpage
 
-### Data Structures
+
+## Data Structures
 
 Vectors are one of the many data structures that R uses.
 
@@ -467,7 +475,7 @@ Vectors are one of the many data structures that R uses.
 -   factors (`factor`)
 -   arrays (`array`)
 
-## Data Frames
+### Data Frames
 
 When we load data into R, it may be stored as an object of class data
 frame.
@@ -481,11 +489,13 @@ For example, here is an example data frame comprising a numeric,
 character, and logical vector.
 
 ```{r eval=TRUE, echo=TRUE}
-df <- data.frame(numeric = c(1, 3, 5, 7, 9, 11),
-                 character = c("F", "O", "O", "B", "A", "R"),
-                 logical = c(TRUE, FALSE, TRUE, FALSE, FALSE, FALSE))
+df <- data.frame(values = c(1, 3, 5, 7, 9, 11),
+                 some_characters = c("F", "O", "O", "B", "A", "R"),
+                 true_false = c(TRUE, FALSE, TRUE, FALSE, FALSE, FALSE))
 df
 ```
+
+### Simple column subsetting
 
 Data frames can also be subset using square brackets as demonstrated
 with the single vectors or using `$` to specifically name a column.
@@ -501,7 +511,7 @@ df[1]
 
 # Column 1 simplified vector
 df[[1]]
-df$numeric
+df$values
 ```
 
 Data can be further subset by providing the indices for the rows and
@@ -511,7 +521,11 @@ by single square brackets listing the rows and columns.
 ```{r}
 # Column 2
 df[2]
+```
 
+### ^\$^Row and column subsetting
+
+```{r}
 # Rows 4 through 6 in column 2
 df[4:6, 2]
 
@@ -528,7 +542,9 @@ df[c(1, 5, 4), 1:2]
 df[c(1, 5, 4), c(1:3)]
 ```
 
-\newpage
+
+
+### ^\$^Column name subsetting
 
 The subset data frame can be further subset using single square brackets
 and the specific names of the columns.
@@ -536,724 +552,25 @@ and the specific names of the columns.
 subsetting.
 
 ```{r eval=TRUE}
-df["character"]
-df[1, "character"]
-df[1:3, "character"]
-df[c(1, 5, 6), c("numeric", "character")]
+df["some_characters"]
+df[1, "some_characters"]
+df[1:3, "some_characters"]
+df[c(1, 5, 6), c("values", "some_characters")]
 ```
 
-\newpage
 
-![Understanding the Iris Dataset](./flowers.png)
 
-## Starting with Data
+### Explore the content of dataframe
 
-This is what the data will look like:
-
-```{r table2, echo=FALSE, message=FALSE, warnings=FALSE, results='asis'}
-tabl <- "
-| Column            | Description                                   |
-|-------------------|:----------------------------------------------|
-| Sepal.Length	    | Sepal length in centimeters                   |            
-| Sepal.Width	      | Sepal width in centimeters                    |
-| Petal.Length	    | Petal length in centimeters                   |
-| Petal.Width	      | Petal width in centimeters                    |
-| Species	          | Name of species name                          |
-"
-cat(tabl)
-```
+- `dim()` returns number of rows and columns
+- `colnames()` returns names of all columns
+-   `str()` can be used with dataframe as with vectors to show structure
+- `summary()` returns summary statistics of columns
 
 ```{r}
-# To see data sets available
-data()
-
-# Load the data set of choice
-# use the data set name as the argument to `data()`
-data(iris)
+dim(df)
+colnames(df)
+str(df)
+summary(df)
 ```
 
-Open the dataset in RStudio’s Data Viewer
-
-```{r eval=FALSE}
-# Check the data type of the data just loaded
-class(iris)
-
-# View the whole data set
-View(iris)
-```
-
-\newpage
-
-Inspect the data
-
-```{r eval=FALSE}
-# See a few rows of the data
-head(iris)
-tail(iris)
-
-# See a specific number of rows of the data
-head(iris, n = 10)
-tail(iris, n = 10)
-```
-
--   Size:
-    -   `dim(iris)` - returns a vector with the number of rows in the
-        first element, and the number of columns as the second element
-        (the dimensions of the object)
-    -   `nrow(iris)` - returns the number of rows
-    -   `ncol(iris)` - returns the number of columns
--   Content:
-    -   `head(iris)` - shows the first 6 rows
-    -   `tail(iris)` - shows the last 6 rows
--   Names:
-    -   `names(iris)` - returns the column names (synonym of colnames()
-        for data.frame objects)
-    -   `rownames(iris)` - returns the row names
--   Summary:
-    -   `str(iris)` - structure of the object and information about the
-        class, length and content of each column
-    -   `summary(iris)` - summary statistics for each column
-
-### Indexing and subsetting data frames
-
-A data frame has rows and columns in 2 dimensions. To extract specific
-data, specify the “coordinates” in `[ ]` indicating row numbers first
-followed by column numbers.
-
-```{r eval=FALSE}
-# dim() gives the output of the rows and columns of the object
-dim(iris)
-
-# Extract specific values by specifying row and column indices
-# in the format: 
-# data_frame[row_index, column_index]
-
-# Extract the first row and first column from iris
-iris[1, 1]
-
-# Extract the first row and sixth column
-iris[1, 6]   
-
-# To select all columns, leave the column index blank
-# Extract the first row and all columns 
-iris[1, ]
-
-# Extract all rows and the first column
-iris[, 1]
-
-# An even shorter way to select first column across all rows:
-iris[1] # No comma! 
-
-# Select multiple rows or columns with vectors
-# Extract the first three rows of the 1st and 2nd columns
-iris[c(1, 2, 3), c(1, 2)] 
-
-# We can use the : operator to create a range and select all listed vectors
-iris[1:3, 1:2] 
-
-# This is equivalent to head(iris)
-iris[1:6, ]
-
-# Subsetting with single square brackets ("[]") always returns a data frame.
-# If you want a vector, use double square brackets ("[[]]")
-
-# For instance, to get a column as a vector:
-iris[[1]]
-iris[["Species"]]
-
-# To get the first value in our data frame:
-iris[[1, 1]]
-iris[1, "Species"]
-
-# Data frames can be subset by calling their column names directly
-# Use the $ operator with column names to return a vector
-iris$Species
-
-```
-
-```{r eval=FALSE}
-# Exceptions: subsetting the whole data frame, except the first 
-# and second columns
-iris[, -c(1, 2)]                
-
-# Exceptions: subsetting all columns of the data frame 
-# except for the first six rows
-iris[-(7:nrow(iris)), ] 
-```
-
-\newpage
-
-## Plotting
-
-Helpful links:
-
--   [Installation](https://ggplot2.tidyverse.org/)
--   [ggplot2: Elegant Graphics for Data
-    Analysis](https://ggplot2-book.org/getting-started.html#basic-use)
-
-Plotting can be done in many different ways in R. Base R has several
-basic plotting functions which can be valuable for a quick peek at your
-data. However, a common and customizable option is to use the package
-`ggplot2`.
-
-Every ggplot2 plot has three key components:
-
--   **Data** (`data`)
--   A set of **aesthetic mappings** between variables in the data and
-    visual properties (`aes(x, y)`)
--   At least one **layer** which describes how to render each
-    observation. Layers are usually created with a geom function. It is
-    important to note that layers are added with a `+`.
-
-```{r, fig.width =5, fig.height = 3, fig.align='center'}
-# Install the following library
-# install.packages("ggplot2")
-
-# Load the ggplot2 package to access its unique functions 
-library(ggplot2)
-
-
-# Step 1: Make the plot object by indicating the input data 
-# and plot aesthetics
-# Example of creating the plot object for a scatter plot
-plot_1 <- ggplot(data = iris, 
-                 aes(x = Sepal.Length, 
-                     y = Sepal.Width)) 
-
-# Step 2: Add layers to the plot object to plot the data. Here we add 
-# the points of the scatter plot
-# Example of a basic scatter plot adding a `geom_point()` layer
-plot_1 + 
-  geom_point()
-
-# Find out the options for `geom_point()`
-?geom_point
-
-# Step 3: Modify each layer using specific arguments and aesthetics options
-# Example of a colorful scatter plot adding aesthetic mappings to the 
-# `geom_point()` layer 
-plot_1 + 
-  geom_point(aes(color = Species, 
-                 shape = Species))
-```
-
-\newpage
-
-```{r, fig.width = 5, fig.height = 3, fig.align='center'}
-
-# Add labels using `labs()`
-plot_1 + 
-  geom_point(aes(color = Species, 
-                 shape = Species)) +
-  labs(x = "Sepal Length",
-       y = "Sepal Width",
-       title = "Sepal Length and Width")
-```
-
-```{r, fig.width = 5, fig.height = 3, fig.align='center'}
-# Boxplot
-plot_2 <- ggplot(data = iris, 
-                 aes(x = Species, 
-                     y = Petal.Width)) 
-
-# Basic boxplot adding a `geom_boxplot()` layer
-# Important note: the x value must be factored or grouped to have individual 
-# boxplots returned
-plot_2 +
-  geom_boxplot()
-  
-# Colorful boxplot adding more layers and aesthetic mappings to the data
-plot_2 + 
-  geom_boxplot(aes(color = Species), 
-               outlier.colour = NA, 
-               position = "dodge") +
-  geom_jitter(aes(color = Species, 
-                  x = Species), 
-              position = position_jitter(width = .05), 
-              alpha = 0.5) +
-  labs(x = "Species", 
-       y = "Petal Width",
-       title = "Petal Width of Iris Species") +
-  theme_bw()
-```
-
-\newpage
-
-R comes with default colors and so does ggplot2. These are nice enough
-but sometimes it is nice to customize our plots. There are few ways we
-can do this.
-
--   [RColorBrewer](https://r-graph-gallery.com/38-rcolorbrewers-palettes.html):
-    Such a helpful tool - contains color palettes and can make a range
-    of colors of your choice. Must be installed and loaded prior to use:
-
-    -   `install.packages("Rcolorbrewer")`
-    -   `library(Rcolorbrewer)`
-
--   [viridisLite](https://ggplot2.tidyverse.org/reference/scale_viridis.html):
-    This is part of ggplot2 that provides color palettes. This does not
-    need to be installed and loaded as it comes with ggplot2.
-
-    -   Another resource
-
--   [Colors in
-    R](http://www.stat.columbia.edu/~tzheng/files/Rcolor.pdf): A list of
-    all the color names available in R
-
--   You can also provide hexidecimal values.
-    [HERE](https://www.w3schools.com/colors/colors_picker.asp?color=00bfff)
-    is a helpful tool.
-
-```{r, fig.width = 5, fig.height = 3, fig.align='center', warning = FALSE}
-
-# Creating the base plot. Here we have indicated the data set and its 
-# mappings.We have also added which column should be used for color 
-# and fill mappings.
-plot_3 <- ggplot(data = iris, 
-                 aes(x = Petal.Length, 
-                     y = Petal.Width,
-                     color = Species,
-                     fill = Species)) 
-
-# Basic boxplot adding a `geom_boxplot()` layer
-plot_3 +
-  geom_point()
-  
-```
-
-\newpage
-
-```{r, fig.width = 5, fig.height = 3, fig.align='center', warning = FALSE}
-# RColorBrewer Examples
-# install.packages("RColorBrewer")
-library(RColorBrewer) 
-
-# RColorBrewer Example 1
-plot_3 + 
-  geom_point(size = 2) +
-  scale_color_brewer(palette = "PuOr")
-
-# RColorBrewer Example 2
-plot_3 + 
-  geom_point(size = 2) +
-  scale_color_brewer(palette = "Blues")
-
-# viridisLite Example 1
-# To be used with discrete data (non-continous)
-# Uses default color option
-plot_3 +
-  geom_point(size = 2) +
-  scale_colour_viridis_d()
-
-# viridisLite Example 2
-# To be used with discrete data (non-continous)
-# C
-plot_3 +
-  geom_point(size = 2) +
-  scale_colour_viridis_d(option = "plasma")
-
-# Using Your Own Colors, Example 1
-plot_3 +
-  geom_point(size = 2) +
-  scale_color_manual(values = c("#440154FF", "#21908CFF", "#FDE725FF")) 
-
-# Using Your Own Colors, Example 2
-plot_3 +
-  geom_point(size = 2) +
-  scale_color_manual(values = c("orange", "red", "skyblue")) 
-
-
-```
-
-\newpage
-
-## Factors
-
-This can be the cause of many issues when plotting data. Always check if
-the data is factored and determined whether is should or should not be
-to get the correct plot.
-
-R has a special class for working with categorical data, called factors.
-Once created, factors can only contain a pre-defined set of values,
-known as levels. Factors are stored as integers associated with labels
-and they can be ordered or unordered. While factors look (and often
-behave) like character vectors, they are actually treated as integer
-vectors by R. So you need to be very careful when treating them as
-strings.
-
-When working with data in a data frame, the columns that contain text
-are not automatically coerced (= converted) into the factor data type,
-but once we have loaded the data we can do the conversion using the
-factor() function
-
-```{r eval=FALSE}
-head(iris)
-iris$Species <- factor(iris$Species)
-head(iris)
-
-summary(iris$Species)
-levels(iris$Species)
-nlevels(iris$Species)
-```
-
-By default, R always sorts levels in alphabetical order. In the example
-below, R will assign 1 to the level "experimental" and 2 to the level
-"wild type" (because "e" comes before "w", even though the first element
-in this vector is "wild type").
-
-```{r eval=FALSE}
-sample <- factor(c("wild type", "experimental", "wild type", "experimental"))
-
-# Different ways to see the levels of factored data
-sample
-levels(sample)
-nlevels(sample)
-```
-
-### Reorder factors
-
-```{r eval=FALSE}
-sample <- factor(sample, 
-                 levels = c("wild type", "experimental"))
-
-sample
-levels(sample)
-nlevels(sample)
-```
-
-\newpage
-
-### Converting Factors
-
-Sometimes it is necessary to convert data from one type to another
-
-```{r eval=FALSE}
-sample <- factor(sample, 
-                 levels = c("wild type", "experimental"))
-
-as.character(sample)
-sample_char <- as.character(sample)
-sample_char
-
-as.numeric(sample)
-```
-
-```{r eval=FALSE}
-year_fct <- factor(c(1990, 1983, 1977, 1998, 1990))
-levels(year_fct)
-
-as.numeric(year_fct)    
-as.character(year_fct)
-
-as.numeric(as.character(year_fct))
-as.numeric(levels(year_fct))[year_fct] 
-```
-
-Notice that in the `levels()` approach, three important steps occur:
-
--   Obtain all the factor levels using `levels(year_fct)`
--   Convert these levels to numeric values using
-    `as.numeric(levels(year_fct))`
--   Access these numeric values using the underlying integers of the
-    vector `year_fct` inside the square brackets
-
-### Renaming Factors
-
-```{r eval=FALSE}
-# Inspect the contents of the column 
-levels(iris$Species)
-
-# Replace level names with a new vector of names
-levels(iris$Species) <- c("Set", "Ver", "Virg")
-levels(iris$Species)
-
-# Check names of factors have been replaced within data frame
-iris$Species
-
-```
-
-\newpage
-
-# Manipulating, analyzing and exporting data with tidyverse
-
-## Data manipulation using dplyr and tidyr
-
-[dplyr](https://dplyr.tidyverse.org/) is a package for helping with
-tabular data manipulation. It pairs nicely with
-[tidyr](https://tidyr.tidyverse.org/) which enables you to convert
-between different data formats for plotting and analysis.
-
-The [tidyverse](https://www.tidyverse.org/) package is an
-“umbrella-package” that installs tidyr, dplyr, and several other useful
-packages for data analysis, such as ggplot2, tibble, etc.
-
-dplyr functions
-
--   `select()` subset columns
--   `filter()` subset rows on conditions
--   `mutate()` create new columns by using information from other
-    columns
--   `group_by()` and `summarize()` create summary statistics on grouped
-    data
--   `arrange()` sort results
--   `count()` count discrete values
-
-### Selecting columns and filtering rows
-
--   `select()` subset columns
-    -   The first argument is the data frame (iris), and the subsequent
-        arguments are the columns to keep.
--   `filter()` subset rows on conditions
-
-```{r eval=TRUE}
-# Install Tidyverse
-# install.packages("tidyverse")
-
-# Load the umbrella package Tidyverse
-library(tidyverse)
-
-# Reloading data to ensure nothing has been manipulated
-data(iris)
-```
-
-```{r, eval=FALSE}
-# Select specific columns
-select(iris, 
-       Species, Petal.Length, Petal.Width)
-```
-
-\newpage
-
-Select all columns except certain ones by using a “-” in front of the
-variable to exclude it
-
-```{r eval=FALSE}
-select(iris, 
-       -Sepal.Length, -Sepal.Width)
-```
-
-Choose rows based on specific criterion with `filter()`
-
-```{r eval=FALSE}
-filter(iris, Species == "virginica")
-```
-
-### Pipes
-
-What if you want to select and filter at the same time? There are three
-ways to do this: use intermediate steps, nested functions, or pipes.
-
-Pipes let you take the output of one function and send it directly to
-the next, which is useful when you need to do many things to the same
-data set. Pipes in R look like `%>%` and are made available via the
-magrittr package, installed automatically with dplyr. If you use
-RStudio, you can type the pipe with `Ctrl` + `Shift` + `M` if you have a
-PC or `Cmd` + `Shift` + `M` if you have a Mac.
-
-```{r eval=FALSE}
-# Filter rows and save as an object
-small <- filter(iris, 
-                Petal.Length < 5)
-
-# Select columns and save as another object
-small_x <- select(small,
-                  Species, Petal.Length, Petal.Width)
-small_x
-
-# Combine the two operations in one piece of code using pipes
-iris %>%
-  filter(Petal.Length < 5) %>%
-  select(Species, Petal.Length, Petal.Width)
-```
-
-Create a plot using the subset data
-
-```{r fig.width=5, fig.height = 3, fig.align = 'center'}
-# Create a new object with the subset data
-iris_petals <- iris %>%
-  filter(Petal.Length < 5) %>%
-  select(Species, Petal.Length, Petal.Width)
-
-# Use new data to create a plot object
-petal_plot <- ggplot(iris_petals, 
-                 aes(x = Petal.Length,
-                     y = Petal.Width))
-
-# Add layers to plot object
-petal_plot +
-  geom_point(aes(shape = Species,
-                 color = Species)) +
-  labs(title = "Iris Small Petal Lengths")
-  
-```
-
-Write the subset data and plot in one piece of code
-
-```{r fig.width=5, fig.height = 3, fig.align = 'center'}
-iris %>%
-  filter(Petal.Length < 5) %>%
-  select(Species, Petal.Length, Petal.Width) %>%
-  ggplot(aes(x = Petal.Length,
-             y = Petal.Width)) +
-  geom_point(aes(shape = Species,
-                 color = Species)) +
-  labs(title = "Iris Small Petal Lengths")
-```
-
-\newpage
-
-### Mutate
-
-Create new columns based on the values in existing columns using
-`mutate()`
-
-```{r eval=FALSE}
-iris %>%
-  mutate(petal_ratio = Petal.Width / Petal.Length,
-         petal_percent = petal_ratio * 100) 
-```
-
-Add a plot in one piece of code
-
-```{r, eval=TRUE, fig.width = 5, fig.height = 3, fig.align='center'}
-iris %>%
-  mutate(petal_ratio = Petal.Width / Petal.Length,
-         petal_percent = petal_ratio * 100) %>%
-  ggplot(aes(x = Species,
-             y = petal_ratio)) +
-  geom_boxplot(aes(color = Species)) +
-  geom_point(aes(color = Species)) +
-  labs(x = "Species",
-       y = "Petal Width / Length",
-       title = "Petal Ratios") +
-  theme_classic()
-```
-
-Pretend the first few rows of the output contain NAs. To remove those we
-can insert a filter() in the chain of functions combined with `is.na()`
-to identify all NAs and the `!` operator to negate the result
-
-```{r eval=FALSE}
-iris %>%
-  filter(!is.na(Petal.Length)) %>%
-  mutate(petal_ratio = Petal.Width / Petal.Length) %>%
-  tail()
-```
-
-### Split-apply-combine data analysis and the `summarize()` function
-
-Many data analysis tasks can be approached using the
-**split-apply-combine paradigm**
-
--   Split the data into groups
--   Apply some analysis to each group
--   Combine the results
-
-Key functions of dplyr for this workflow are `group_by()` and
-`summarize()`. `group_by()` is often used together with `summarize()`,
-which collapses each group into a single-row summary of that group.
-
-```{r eval=FALSE}
-iris %>%
-  group_by(Species) %>%
-  summarize(petal_width_mean = mean(Petal.Width, na.rm = TRUE))
-```
-
-Once the data are grouped, you can also summarize multiple variables at
-the same time. Add a column indicating the minimum and maximum width for
-each species.
-
-```{r eval=FALSE}
-iris %>%
-  filter(!is.na(Petal.Width)) %>%
-  group_by(Species) %>%
-  summarize(petal_width_mean = mean(Petal.Width),
-            petal_width_min = min(Petal.Width),
-            petal_width_max = max(Petal.Width))
-```
-
-### Exporting plots
-
-`ggsave()` allows you easily change the dimension and resolution of your
-plot by adjusting the appropriate arguments (width, height, and dpi)
-
-```{r eval=FALSE}
-my_plot <- ggplot(data = iris,
-                  aes(x = Sepal.Length, 
-                      y = Sepal.Width, 
-                      color = Species)) +
-    geom_point() +
-    facet_wrap(vars(Species)) +
-    labs(title = "Petal width by species",
-         x = "Sepal Length",
-         y = "Sepal Width") +
-    theme_bw() +
-    theme(axis.text.x = element_text(colour = "grey20", size = 12, angle = 90,
-                                     hjust = 0.5, vjust = 0.5),
-          axis.text.y = element_text(colour = "grey20", size = 12),
-          text = element_text(size = 16))
-
-ggsave("path/name_of_file.png", my_plot, width = 15, height = 10)
-
-```
-
-### Importing Data
-
-It is fun to practice our R skills and try out new methods with the
-built-in R data sets. However, we need the option to load read data into
-R! This can be done using a few different options depending on the
-delimiter of your original file.
-
-I'll refer you to section of [IMPORTING
-DATA](https://intro2r.com/importing-data.html) from this lovely online
-resource **Introduction to R**. It even has videos!
-
-# Review
-
-## Objects
-
--   Variables: placeholders for assigned values and objects.
--   Vectors: contain a single type of value (character, numeric,
-    logical, or integer)
--   Data frames: are multiple vectors of the same length, each vector
-    can contain a different data type.
-
-## Subsetting
-
--   Subsetting: extracts values from a vector or larger objects
-    -   Brackets indicate the values to be subset
-    -   Logical vectors determine the values to be selected
-    -   Conditional operators: select values based on criterion provided
-        -   or (`|`), and (`&`)
-        -   less than (`<`, `<=`), greater than (`>`, `>=`), equal to
-            (`==`)
-
-## Data
-
--   The most common object you'll see are data frames, which are a
-    collection of vectors of the same length.
--   Missing data: missing data can cause issues with some functions but
-    can be easily circumvented using the argument `na.rm = TRUE`, making
-    a logical vector with `is.na()` or `!is.na()`, or using the
-    functions `na.omit()` or `complete.cases()`
--   Data sets are available in R for you to use, simply choose one from
-    a list `data()`
-
-## Tidyverse
-
--   It is common to use tools and packages available in the Tidyverse
-    collection for data analysis and visualization.
--   `Ggplot2`: this package is for data visualization. It requires a
-    ggplot for the base plot which contains the data, then layers can be
-    added to generate a personalized plot.
--   Factors are critical for generating the correct plot (`levels()`)
--   `Dplyr`: is helpful for data frame manipulation.
-    -   `%>%` is used as a pipe, which sends the result from one process
-        to the next. Results from data manipulation can be sent directly
-        to make a ggplot and layers can be added from there.
-    -   `select()` selects columns
-    -   `filter()` filters rows based on conditions provided
--   Save
-    -   Save your script in a `.R` plain text file to save your code
-    -   Save your data in CSV format using `write.csv()`
-    -   `ggsave` save your images to any type of file
